WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41810
AX: TextArea should return AXSelectedTextRange of 0,0 if the cursor is not in the text area
https://bugs.webkit.org/show_bug.cgi?id=41810
Summary
AX: TextArea should return AXSelectedTextRange of 0,0 if the cursor is not in...
chris fleizach
Reported
2010-07-07 16:19:51 PDT
A text area in a webpage will return a null value for AXSelectedTextRange if the cursor is not in the text range. It should return a text range of 0,0 instead Here's webkit AXSelectedText (W): "" AXSelectedTextRange (W): "(null)" here's TextEdit AXSelectedText (W): "" AXSelectedTextRange (W): "pos=0 len=0"
Attachments
Patch
(5.78 KB, patch)
2010-07-07 16:25 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-07-07 16:25:24 PDT
Created
attachment 60799
[details]
Patch
Darin Adler
Comment 2
2010-07-07 17:41:45 PDT
Comment on
attachment 60799
[details]
Patch Is this better? It returns the same value it would if the insertion point was at the start of the text area. It seems to me that a blinking insertion point is different from not having selection at all. r=me
chris fleizach
Comment 3
2010-07-07 17:56:37 PDT
(In reply to
comment #2
)
> (From update of
attachment 60799
[details]
) > Is this better? It returns the same value it would if the insertion point was at the start of the text area. It seems to me that a blinking insertion point is different from not having selection at all. > > r=me
This matches TextEdit and Cocoa behavior. I had come across a VoiceOver bug a while ago that was relying on this value not being nil. When nil is returned, that usually propagates back a AX error. I think we should match Cocoa behavior in this case.
chris fleizach
Comment 4
2010-07-07 18:04:35 PDT
http://trac.webkit.org/changeset/62735
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug