WebCore: AX: TextArea should return AXSelectedTextRange of 0,0 if the cursor is not in the text area https://bugs.webkit.org/show_bug.cgi?id=41810

WebKitTools: AX: TextArea should return AXSelectedTextRange of 0,0 if the cursor is not in the text area
https://bugs.webkit.org/show_bug.cgi?id=41810

Reviewed by Darin Adler.

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::selectedTextRange):

LayoutTests: AX: TextArea should return AXSelectedTextRange of 0,0 if the cursor is not in the text area
https://bugs.webkit.org/show_bug.cgi?id=41810

Reviewed by Darin Adler.

* platform/mac/accessibility/selected-text-range-for-empty-textarea-expected.txt: Added.
* platform/mac/accessibility/selected-text-range-for-empty-textarea.html: Added.



Canonical link: https://commits.webkit.org/53633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62735 268f45cc-cd09-0410-ab3c-d52691b4dbfc